--- a/libft/Makefile
+++ b/libft/Makefile
@@ -8,7 +8,7 @@ SRCS_FILES = ft_strlen.c ft_memset.c ft_bzero.c ft_memcpy.c ft_memccpy.c \
 			ft_isprint.c ft_toupper.c ft_tolower.c ft_strtoupper.c \
 			ft_calloc.c ft_strdup.c \
 			ft_substr.c ft_strjoin.c ft_strtrim.c ft_split.c ft_itoa.c \
-			ft_itox.c ft_uitoa.c \
+			ft_itox.c ft_stox.c ft_uitoa.c \
 			ft_strmapi.c ft_putchar_fd.c ft_putstr_fd.c ft_putendl_fd.c \
 			ft_putnbr_fd.c ft_lstnew.c ft_lstadd_front.c ft_lstsize.c \
 			ft_lstlast.c ft_lstadd_back.c ft_lstdelone.c ft_lstclear.c \
